// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteContainer should match the snapshot 1`] = `
<div
  className="NoteContainer"
>
  <div
    className="NoteContainer--div"
  >
    <Connect(LoginButton) />
  </div>
  <Masonry
    breakpointCols={
      Object {
        "1040": 3,
        "1296": 4,
        "1552": 5,
        "528": 1,
        "784": 2,
        "default": 6,
      }
    }
    className="NoteContainer--cards"
    columnClassName="NoteContainer--cards-masonry-cols"
  >
    <Connect(NoteCard)
      id="fah"
      index={3}
      key="fah"
      listItems={
        Array [
          Object {
            "description": "gather ingredients",
            "id": "ley",
            "isComplete": false,
          },
          Object {
            "description": "preheat oven",
            "id": "mei",
            "isComplete": false,
          },
        ]
      }
      title="Make dinner"
    />
    <Connect(NoteCard)
      id="bah"
      index={2}
      key="bah"
      listItems={
        Array [
          Object {
            "description": "Stop by King Soopers",
            "id": "rey",
            "isComplete": false,
          },
          Object {
            "description": "Stop by Sprouts",
            "id": "moo",
            "isComplete": false,
          },
        ]
      }
      title="Grocery shopping"
    />
    <Connect(NoteCard)
      id="pdo"
      index={1}
      key="pdo"
      listItems={
        Array [
          Object {
            "description": "Setup user account",
            "id": "cat",
            "isComplete": false,
          },
        ]
      }
      title="Start portfolio"
    />
    <Connect(NoteCard)
      id="ijf"
      index={0}
      key="ijf"
      listItems={
        Array [
          Object {
            "description": "read through lesson",
            "id": "asg",
            "isComplete": false,
          },
          Object {
            "description": "follow along with tutorial",
            "id": "rhf",
            "isComplete": false,
          },
        ]
      }
      title="Learn Redux"
    />
  </Masonry>
</div>
`;

exports[`NoteContainer should match the snapshot when isDisabled is true 1`] = `
<div
  className="NoteContainer--disabled"
>
  <div
    className="NoteContainer--div"
  >
    <Connect(LoginButton) />
  </div>
  <Masonry
    breakpointCols={
      Object {
        "1040": 3,
        "1296": 4,
        "1552": 5,
        "528": 1,
        "784": 2,
        "default": 6,
      }
    }
    className="NoteContainer--cards"
    columnClassName="NoteContainer--cards-masonry-cols"
  >
    <Connect(NoteCard)
      id="fah"
      index={3}
      key="fah"
      listItems={
        Array [
          Object {
            "description": "gather ingredients",
            "id": "ley",
            "isComplete": false,
          },
          Object {
            "description": "preheat oven",
            "id": "mei",
            "isComplete": false,
          },
        ]
      }
      title="Make dinner"
    />
    <Connect(NoteCard)
      id="bah"
      index={2}
      key="bah"
      listItems={
        Array [
          Object {
            "description": "Stop by King Soopers",
            "id": "rey",
            "isComplete": false,
          },
          Object {
            "description": "Stop by Sprouts",
            "id": "moo",
            "isComplete": false,
          },
        ]
      }
      title="Grocery shopping"
    />
    <Connect(NoteCard)
      id="pdo"
      index={1}
      key="pdo"
      listItems={
        Array [
          Object {
            "description": "Setup user account",
            "id": "cat",
            "isComplete": false,
          },
        ]
      }
      title="Start portfolio"
    />
    <Connect(NoteCard)
      id="ijf"
      index={0}
      key="ijf"
      listItems={
        Array [
          Object {
            "description": "read through lesson",
            "id": "asg",
            "isComplete": false,
          },
          Object {
            "description": "follow along with tutorial",
            "id": "rhf",
            "isComplete": false,
          },
        ]
      }
      title="Learn Redux"
    />
  </Masonry>
</div>
`;

exports[`NoteContainer should return a NoteCard 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
